# research

./: .gitignore
areal_async_rollout_report/: async_rollout_example.py  report.md
codex-autoresearch/: .gitignore  LICENSE  README.md  pyproject.toml
codex-autoresearch/codex_autoresearch/: __init__.py  cli.py  git_ops.py  models.py  rendering.py  session.py
codex-autoresearch/skills/codex-autoresearch/: SKILL.md
codex-autoresearch/skills/codex-autoresearch/agents/: openai.yaml
codex-autoresearch/templates/: autoresearch.md  autoresearch.sh
codex-autoresearch/tests/: test_cli_integration.py  test_rendering.py  test_session.py
codex-sandbox-report/: linux_sandbox_report.md  macos_sandbox_report.md
mini-gepa/: README.md  mini_gepa.py  review_subagent_report.md
mini-gepa2/: README.md  pyproject.toml
mini-gepa2/src/mini_gepa2/: __init__.py  adapter.py  api.py  demo.py  engine.py  proposal.py  reflection.py  sampler.py  selectors.py  state.py
mini-gepa2/tests/: test_optimizer.py
mini-megatrain/: README.md  pyproject.toml
mini-megatrain/configs/: demo_1b.yaml  tiny_debug.yaml
mini-megatrain/src/mini_megatrain/: __init__.py  config.py  dataset.py  engine.py  model.py  train.py
mini-megatrain/tests/: conftest.py  test_config.py  test_streaming_equivalence.py
optimize_anything_autoresearch_study/: README.md  REPORT.md  optimized_anything_autoresearch.py  test_prototype.py
optimize_anything_autoresearch_study/outputs/: report.md  trace.json
prime-rl-design/: asynchronous_training.md  checkpointing.md
python-markdown-comparison/: README.md  benchmark.py  plot.py  requirements.txt  results.json  sample.md
rl-for-llm-techs/: analysis_report.md
rl-llm-async-training/: AReaL.md  overview.md  prime-rl.md  slime.md  verl.md
ssd-impl/: .gitignore  README.md  pyproject.toml
ssd-impl/configs/: qwen3_4b_instruct_paperish.yaml  qwen3_4b_instruct_portable.yaml
ssd-impl/src/ssd_impl/: __init__.py  checkpoint.py  config.py  dataset.py  filters.py  io_utils.py  merge.py  prompts.py  sample.py  synthesize.py  train.py
ssd-impl/tests/: __init__.py  helpers.py  test_checkpoint.py  test_config.py  test_dataset.py  test_filters.py  test_prompts.py  test_smoke.py  test_synthesize.py
vae/: .gitignore  README.md  pyproject.toml
vae/configs/: config.yaml
vae/src/vae_torch/: __init__.py  checkpoint.py  data.py  losses.py  model.py  train.py
vae/tests/: test_checkpoint.py  test_losses.py  test_model_shapes.py
vllm-dist-infer/: README.md
wordcloud-rs/: Cargo.toml  README.md
wordcloud-rs/src/: cache.rs  convert.rs  freq.rs  input.rs  layout.rs  main.rs  output.rs  render_svg.rs  tokenize.rs
wordcloud-rs/tests/: integration_cli.rs
