[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "codex-autoresearch"
version = "0.1.0"
description = "Codex-friendly autonomous experiment loop controller inspired by pi-autoresearch."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Sian Cao" },
]
keywords = ["codex", "autoresearch", "benchmark", "optimization", "skill"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
codex-autoresearch = "codex_autoresearch.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["codex_autoresearch"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

