[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-megatrain"
version = "0.1.0"
description = "Teaching-oriented CPU-master single-GPU training prototype inspired by MegaTrain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.0",
  "torch>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
mini-megatrain-train = "mini_megatrain.train:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
